# cluster_fs

./: .gitignore  README.md  file_explorer.py  flask_server.py  index.html  pyproject.toml  server.py  simple_server.py
cluster_fs/: cluster_fs.py
templates/: index.html
